Docker/Gaia/proyectos/ptaller/deploy/kubernetes/service-webtaller.yml
apiVersion: v1
kind: Service
Metadata:
    name: webtaller-Service
    namespace: proyectotaller
spec: 
  type: NodePort
  selector: 
    app: webtaller
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
